# simba

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml
script/: test.sh
simba/: log.py  main.py  stopwatch.py  timer.py
simba/args/: argv.py  common.py  toolchain.py
simba/convert/: csv.py  html.py  json.py  main.py
simba/make/: miniproject.py
simba/run/: adjustment.py  executable.py  main.py  miniproject.py  plan_miniproject.py  plan_sources.py  plan_suite.py  report.py  run_executable.py  sources.py  suite.py  task.py
simba/verilator/: core.py  log.py
test/ceil/: a.ll  main.c
test/gepn/: a.ll  main.c
test/memset/: a.ll  main.c
test/nop/: nop.S
test/sumll/: main.S
test/trampoline/: main.c
test/vec/: main.c
